new section added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +17,9 @@
     <link rel="stylesheet" href="assets/css/animation.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
+
 <body>
-    
+
     <!-- Header Area Start -->
     <header class="header-area">
         <div class="container">
@@ -72,8 +74,10 @@
                 <div class="container">
                     <div class="row v-middle">
                         <div class="col-lg-6 col-md-12">
-                            <h1> <span class="stoke">Focus</span> <span class="green">on the Right</span> Project For Your <span class="stoke">Business</span> </h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                            <h1> <span class="stoke">Focus</span> <span class="green">on the Right</span> Project For
+                                Your <span class="stoke">Business</span> </h1>
+                            <p>Strategy experience and analytical expertise combine to enable. Adipisicing elit.
+                                Repellendus, dicta.</p>
                             <form action="">
                                 <input type="email" placeholder="Enter your email address">
                                 <input class="common-btn" type="submit" value="Get in Touch">
@@ -89,10 +93,49 @@
     </header>
     <!-- Header Area End -->
 
-  ajdjskds
+    <div class="app-features pt-130 pb-100 comoon-bg">
+        <div class="container">
+            <div class="app-feature-content">
+                <p>APP FEATURE _</p>
+                <h2>The most Accurate <br>
+                    <span class="green">time-tracking </span> <span class="stoke">system</span>
+                </h2>
+            </div>
+            <div class="row">
+
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="single-feature">
+                        <img src="assets/images/icon1.png" alt="icon1">
+                        <h3>Fully Secured</h3>
+                        <p>Strategy experience and analytical expertise combine to enable.</p>
+                        <h2 class="stoke">01</h2>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-12  col-md-6 col-lg-4">
+                    <div class="single-feature">
+                        <img src="assets/images/icon2.png" alt="icon2">
+                        <h3>Easy to Edit</h3>
+                        <p>Strategy experience and analytical expertise combine to enable.</p>
+                        <h2 class="stoke">02</h2>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12  col-md-6 col-lg-4">
+                    <div class="single-feature">
+                        <img src="assets/images/icon3.png" alt="icon3">
+                        <h3>Desing & Branding</h3>
+                        <p>Strategy experience and analytical expertise combine to enable.</p>
+                        <h2 class="stoke">03</h2>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <!-- Scripts -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
