--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                             <p>Strategy experience and analytical expertise combine to enable. Adipisicing elit.
                                 Repellendus, dicta.</p>
                             <form action="">
-                                <input type="email" placeholder="Enter your email address">
+                                <input type="email" placeholder="Email address">
                                 <input class="common-btn" type="submit" value="Get in Touch">
                             </form>
                         </div>
                         <div class="col-lg-6 col-md-12">
-                            <img src="assets/images/hero-image.png" alt="hero-image" class="item-bounce">
+                            <img src="assets/images/hero-image-2.png" alt="hero-image" class="item-bounce">
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,8 @@
     </header>
     <!-- Header Area End -->
 
-    <div class="app-features pt-130 pb-100 comoon-bg">
+    <!-- App Features Area Start -->
+    <div class="app-features pt-130 pb-100 common-bg fix">
         <div class="container">
             <div class="app-feature-content">
                 <p>APP FEATURE _</p>
@@ -123,7 +124,7 @@
                 <div class="col-12 col-sm-12  col-md-6 col-lg-4">
                     <div class="single-feature">
                         <img src="assets/images/icon3.png" alt="icon3">
-                        <h3>Desing & Branding</h3>
+                        <h3>Branding</h3>
                         <p>Strategy experience and analytical expertise combine to enable.</p>
                         <h2 class="stoke">03</h2>
                     </div>
@@ -132,6 +133,139 @@
             </div>
         </div>
     </div>
+    <!-- App Features Area End -->
+
+    <!-- Dashboard Features Area Start -->
+    <div class="dashboard-features pt-140 pb-100">
+        <div class="container">
+            <div class="dashboard-feature">
+                <div class="row v-middle">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+                        <div class="dashboard-feature-image">
+                            <img src="assets/images/df1.png" alt="df1">
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+                        <div class="dashboard-feature-content">
+                            <p class="small-p">DASHBOARD FEATURE _</p>
+                            <h2>The most Accurate <br>
+                                <span class="green">time-tracking </span> <span class="stoke">system</span>
+                        </div>
+                        <div class="feature-list">
+                            <div class="feature-list-icon">
+                                <img src="assets/images/icon4.png" alt="icon4">
+                            </div>
+                            <div class="feature-list-text">
+                                <h3>Make a profile</h3>
+                                <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                            </div>
+                        </div>
+
+                        <div class="feature-list">
+                            <div class="feature-list-icon">
+                                <img src="assets/images/icon5.png" alt="icon5">
+                            </div>
+                            <div class="feature-list-text">
+                                <h3>Download it for Free</h3>
+                                <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                            </div>
+                        </div>
+                        <div class="feature-list">
+                            <div class="feature-list-icon">
+                                <img src="assets/images/icon6.png" alt="icon6">
+                            </div>
+                            <div class="feature-list-text">
+                                <h3>Enjoy this App</h3>
+                                <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                            </div>
+                        </div>
+
+                        </h2>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Dashboard Features Area End -->
+
+    <!-- Dashboard Features Two Start -->
+    <div class="dashboard-features-two pt-140 pb-100 common-bg">
+        <div class="container">
+            <div class="dashboard-feature">
+                <div class="row v-middle">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+                        <div class="dashboard-feature-content">
+                            <p class="small-p">DASHBOARD FEATURE _</p>
+                            <h2>The most Accurate <br>
+                                <span class="green">time-tracking </span> <span class="stoke">system</span>
+                            </h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-6 col-md-6 col-xl-6">
+                                <div class="feature-list">
+                                    <div class="feature-list-icon">
+                                        <img src="assets/images/icon4.png" alt="icon4">
+                                    </div>
+                                    <div class="feature-list-text">
+                                        <h3>Make a profile</h3>
+                                        <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-6 col-xl-6">
+                                <div class="feature-list">
+                                    <div class="feature-list-icon">
+                                        <img src="assets/images/icon5.png" alt="icon5">
+                                    </div>
+                                    <div class="feature-list-text">
+                                        <h3>Digital Analysis</h3>
+                                        <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-6 col-xl-6">
+                                <div class="feature-list">
+                                    <div class="feature-list-icon">
+                                        <img src="assets/images/icon6.png" alt="icon6">
+                                    </div>
+                                    <div class="feature-list-text">
+                                        <h3>Product Creating</h3>
+                                        <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-12 col-sm-6 col-md-6 col-xl-6">
+                                <div class="feature-list">
+                                    <div class="feature-list-icon">
+                                        <img src="assets/images/icon7.png" alt="icon7">
+                                    </div>
+                                    <div class="feature-list-text">
+                                        <h3>Find New Ideas</h3>
+                                        <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+                        <div class="dashboard-feature-image">
+                            <img src="assets/images/df2.png" alt="df2">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Dashboard Features Two End -->
+
+
 
     <!-- Scripts -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
