fixing hero section input

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             </div>
                             <div class="feature-list-text">
                                 <h3>Make a profile</h3>
-                                <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
                             </div>
                         </div>
 
@@ -172,7 +172,7 @@
                             </div>
                             <div class="feature-list-text">
                                 <h3>Download it for Free</h3>
-                                <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
                             </div>
                         </div>
                         <div class="feature-list">
@@ -181,7 +181,7 @@
                             </div>
                             <div class="feature-list-text">
                                 <h3>Enjoy this App</h3>
-                                <p>Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
                             </div>
                         </div>
 
