--- a/index.html
+++ b/index.html
@@ -24,70 +24,54 @@
 <body>
 
     <!-- Header Area Start -->
-    <header class="header-area">
-        <div class="container">
-            <div class="header-top">
-                <div class="row v-middle">
-                    <div class="col-lg-4 col-md-4">
-                        <div class="logo">
-                            <a href="index.html"><img src="assets/images/cropium.png" alt="cropium"></a>
+    <header>
+        <div class="header-area pt-50">
+            <div class="container">
+                <div class="header-desktop">
+                    <div class="row align-items-center">
+                        <div class="col-lg-3 col-md-3 col-4">
+                            <div class="logo">
+                                <a href="index.html"><img src="assets/images/cropium.png" alt="cropium"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-8 col-md-8">
-                        <div class="header-right">
-                            <nav class="main-menu">
-                                <ul>
-                                    <li><a class="active" href="#">Home</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Awards</a></li>
-                                    <li><a href="#">Clients</a></li>
-                                    <li><a href="#">Contacts</a></li>
-                                </ul>
-                            </nav>
+                        <div class="col-lg-6 d-none d-lg-block" >
+                            <div class="header-right">
+                                <nav class="main-menu">
+                                    <ul>
+                                        <li><a class="active" href="#">Home</a></li>
+                                        <li><a href="#">Services</a></li>
+                                        <li><a href="#">Awards</a></li>
+                                        <li><a href="#">Clients</a></li>
+                                        <li><a href="#">Contacts</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-9 col-8">
                             <div class="header-right-button">
                                 <a class="common-btn" href="#">Contact us</a>
                             </div>
                         </div>
-
                     </div>
                 </div>
-            </div>
-            <!-- Mobile Menu -->
-            <div class="mobile-menu">
-                <div class="menu-top">
-                    <img src="assets/images/cropium.png" alt="cropium" class="mobile-logo">
-                    <img src="assets/images/menu.png" alt="cropium" class="menu-icon" onclick="openmenu()">
-                </div>
-                <div class="menu-box" id="menu">
-                    <div class="close-link">
-                        <img src="assets/images/close.png" alt="close" onclick="closemenu()">
+                <!-- Mobile Menu -->
+                <div class="mobile-menu">
+                    <div class="menu-top">
+                        <img src="assets/images/cropium.png" alt="cropium" class="mobile-logo">
+                        <img src="assets/images/menu.png" alt="cropium" class="menu-icon" onclick="openmenu()">
                     </div>
-                    <div class="menu-links">
-                        <ul>
-                            <li><a class="active" href="#">Home</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Awards</a></li>
-                            <li><a href="#">Clients</a></li>
-                            <li><a href="#">Contacts</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="header-bottom">
-                <div class="container">
-                    <div class="row v-middle">
-                        <div class="col-lg-6 col-md-12">
-                            <h1> <span class="stoke">Focus</span> <span class="green">on the Right</span> Project For
-                                Your <span class="stoke">Business</span> </h1>
-                            <p>Strategy experience and analytical expertise combine to enable. Adipisicing elit.
-                                Repellendus, dicta.</p>
-                            <form action="">
-                                <input type="email" placeholder="Email address">
-                                <input class="common-btn" type="submit" value="Get in Touch">
-                            </form>
+                    <div class="menu-box" id="menu">
+                        <div class="close-link">
+                            <img src="assets/images/close.png" alt="close" onclick="closemenu()">
                         </div>
-                        <div class="col-lg-6 col-md-12">
-                            <img src="assets/images/hero-image-2.png" alt="hero-image" class="item-bounce">
+                        <div class="menu-links">
+                            <ul>
+                                <li><a class="active" href="#">Home</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Awards</a></li>
+                                <li><a href="#">Clients</a></li>
+                                <li><a href="#">Contacts</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -96,11 +80,37 @@
     </header>
     <!-- Header Area End -->
 
+    <!-- Hero Area Start -->
+    <div class="hero-section pt-30 pb-100">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="hero-left">
+                        <h1> <span class="stoke">Focus</span> <span class="green">on the Right</span> Project For
+                            Your <span class="stoke">Business</span> </h1>
+                        <p>Strategy experience and analytical expertise combine to enable. Adipisicing elit.
+                            Repellendus, dicta.</p>
+                        <form action="">
+                            <input type="email" placeholder="Email address">
+                            <input class="common-btn" type="submit" value="Get in Touch">
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-5 offset-lg-1 col-md-12">
+                    <div class="hero-right">
+                        <img src="assets/images/hero-image-2.png" alt="hero-image" class="item-bounce">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Hero Area End -->
+
     <!-- App Features Area Start -->
-    <div class="app-features pt-130 pb-100 common-bg fix">
+    <div class="app-features pt-130 pb-120  fix" style="background-image: url(assets/images/shape3.png);">
         <div class="container">
             <div class="app-feature-content">
-                <p>APP FEATURE _</p>
+                <p class="small-p">APP FEATURE _</p>
                 <h2>The most Accurate <br>
                     <span class="green">time-tracking </span> <span class="stoke">system</span>
                 </h2>
@@ -112,7 +122,7 @@
                         <img src="assets/images/icon1.png" alt="icon1">
                         <h3>Fully Secured</h3>
                         <p>Strategy experience and analytical expertise combine to enable.</p>
-                        <h2 class="stoke">01</h2>
+                        <span class="stoke">01</span>
                     </div>
                 </div>
 
@@ -121,7 +131,7 @@
                         <img src="assets/images/icon2.png" alt="icon2">
                         <h3>Easy to Edit</h3>
                         <p>Strategy experience and analytical expertise combine to enable.</p>
-                        <h2 class="stoke">02</h2>
+                        <span class="stoke">02</span>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12  col-md-6 col-lg-4">
@@ -129,7 +139,7 @@
                         <img src="assets/images/icon3.png" alt="icon3">
                         <h3>Branding</h3>
                         <p>Strategy experience and analytical expertise combine to enable.</p>
-                        <h2 class="stoke">03</h2>
+                        <span class="stoke">03</span>
                     </div>
                 </div>
 
@@ -139,17 +149,17 @@
     <!-- App Features Area End -->
 
     <!-- Dashboard Features Area Start -->
-    <div class="dashboard-features pt-140 pb-100">
+    <div class="dashboard-features pt-130 pb-120">
         <div class="container">
             <div class="dashboard-feature">
-                <div class="row v-middle">
-                    <div class="col-12 col-sm-12 col-md-6 col-xl-6">
+                <div class="row align-items-center">
+                    <div class="col-md-12 col-lg-6 col-xl-6">
                         <div class="dashboard-feature-image">
                             <img src="assets/images/df1.png" alt="df1">
                         </div>
                     </div>
 
-                    <div class="col-12 col-sm-12 col-md-6 col-xl-6">
+                    <div class="col-md-12 col-lg-5 offset-lg-1">
                         <div class="dashboard-feature-content">
                             <p class="small-p">DASHBOARD FEATURE _</p>
                             <h2>The most Accurate <br>
@@ -196,10 +206,10 @@
     <!-- Dashboard Features Area End -->
 
     <!-- Dashboard Features Two Start -->
-    <div class="dashboard-features-two pt-140 pb-100 common-bg">
+    <div class="dashboard-features-two pt-130 pb-120 common-bg fix">
         <div class="container">
             <div class="dashboard-feature">
-                <div class="row v-middle">
+                <div class="row align-items-center">
                     <div class="col-12 col-sm-12 col-md-12 col-xl-6">
                         <div class="dashboard-feature-content">
                             <p class="small-p">DASHBOARD FEATURE _</p>
@@ -270,17 +280,17 @@
     <!-- Dashboard Features Two End -->
 
     <!-- Customer Service Area Start -->
-    <div class="customer-services pt-140">
+    <div class="customer-services pt-130">
         <div class="container">
             <div class="customer-service">
-                <div class="row v-middle">
-                    <div class="col-12 col-sm-12 col-md-6 col-xl-6">
+                <div class="row align-items-center">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
                         <div class="customer-service-image">
                             <img src="assets/images/sr1.png" alt="sr1">
                         </div>
                     </div>
 
-                    <div class="col-12 col-sm-12 col-md-6 col-xl-6">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
                         <div class="customer-service-content">
                             <p class="small-p">CUSTOMER SERVICE  _</p>
                             <h2>
@@ -317,12 +327,12 @@
 
     
     <!-- Customer Service Area Two Start -->
-    <div class="customer-services pt-100 pb-100">
+    <div class="customer-services pt-130 pb-120">
         <div class="container">
             <div class="customer-service">
-                <div class="row v-middle">
+                <div class="row align-items-center">
 
-                    <div class="col-12 col-sm-12 col-md-6 col-xl-6">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
                         <div class="customer-service-content">
                             <p class="small-p">CUSTOMER SERVICE  _</p>
                             <h2>
@@ -351,7 +361,7 @@
                         <a href="#" class="common-btn">Read More</a>
                     </div>
 
-                    <div class="col-12 col-sm-12 col-md-6 col-xl-6">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-6">
                         <div class="customer-service-image">
                             <img src="assets/images/sr2.png" alt="sr2">
                         </div>
@@ -481,7 +491,7 @@
     <!-- Testimonial Area Start -->
     <div class="testimonial-area pt-130 pb-100">
         <div class="container">
-            <div class="row v-middle">
+            <div class="row align-items-center">
                 <div class="col-lg-6">
                     <p class="small-p">CUSTOMER SERVICE  _</p>
                     <h2>
@@ -566,7 +576,7 @@
     <!-- CTA Area Start-->
     <div class="cta-area">
        <div class="container">
-            <div class="row v-middle">
+            <div class="row align-items-center">
                 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                     <h2>
                         <span class="green">Ready</span> to use this? <br> Start Your free <span class="stoke">trial today</span>
@@ -654,7 +664,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <div class="row v-middle">
+                <div class="row align-items-center">
                     <div class="col-md-6 col-lg-6">
                         <div class="logo">
                             <a href="#"><img src="assets/images/cropium.png" alt="logo"></a>
